--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p>
-        hola estudiantes este es mi sitio web
-        sigueme en fb como Abdel Mustafa
+        hola amigos mi nombre es Abdel Mustafa
     </p>
     
 </body>
